[project]
name = "subgrade"
version = "0.1.0"
description = "self-use foundation for layered configs and log"
authors = [
    {name = "blackturtle",email = "blacktuitle@gmail.com"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "pydantic (>=2.13.2,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "loguru-config (>=0.1.0,<0.2.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
exclude = ["poetry.lock", "test/"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["."]
