[project]
name = "subgrade"
version = "0.1.1"
description = "self-use foundation for layered configs and log"
authors = [
    {name = "blackturtle",email = "blacktuitle@gmail.com"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "pydantic (>=2.13.2,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "rich (>=15.0.0,<16.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "structlog (>=25.5.0,<26.0.0)"
]
license = "MIT"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
exclude = ["test/"]
readme = ["README.md"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["."]
